fold plotting code

--- a/stories/2024-01-01-Eurovision/story.ipynb
+++ b/stories/2024-01-01-Eurovision/story.ipynb
@@ -860,6 +860,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "my_cmap = plt.get_cmap(\"magma_r\")\n",
     "rescale = lambda y: y / 26\n",
     "\n",
@@ -909,6 +910,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "fig, ax = plt.subplots(1, 1, figsize=(5, 4), sharey=True, sharex=True, squeeze=True)\n",
     "\n",
     "plot_country_history('united kingdom', ax, df)\n",
@@ -944,6 +946,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "fig = plt.figure(layout='constrained', figsize=(12, 6))\n",
     "subfigs = fig.subfigures(2, 1, wspace=0.1)\n",
     "\n",
@@ -1027,6 +1030,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "import scipy.spatial as sp\n",
     "import scipy.cluster.hierarchy as hc\n",
     "\n",
@@ -1116,6 +1120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "plot = plot_voting_heatmap(df_voting_deviation, cmap='RdBu_r',\n",
     "                           suptitle='Average vote deviation from one country to another',\n",
     "                           center=0)\n",
@@ -1186,6 +1191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "pair_grouped_points = df.groupby(['to_country', 'from_country'])['points']\n",
     "\n",
     "votes = (df.loc[:, ['to_country', 'from_country', 'points', 'year']]\n",
@@ -1229,6 +1235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "import plotly.express as px\n",
     "\n",
     "fig = px.scatter(votes, x='total_points', y='average_points')\n",
@@ -1262,6 +1269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "votes = (votes.assign(highest_average_point=lambda x: x.groupby(['to_country'])['average_points'].transform('max'))\n",
     "              .sort_values(by='highest_average_point', ascending=True))\n",
     "\n",
@@ -1312,6 +1320,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "# how often did each country participate?\n",
     "n_participations = (df\n",
     "                    .groupby('to_country')['year']\n",
@@ -1339,6 +1348,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "# Grouping by performer and voter, calculate mean votes and count number of years\n",
     "df_pairs = (df_pairs\n",
     "    .groupby(['from_country', 'to_country'])\n",
@@ -1382,6 +1392,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "# Number of country pairs to show for each category\n",
     "N = 5\n",
     "\n",
@@ -1420,6 +1431,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "# Replace group names with numeric values for sorting\n",
     "group_order = {'low': 1, 'one-sided': 2, 'high': 3}\n",
     "top_relationships['group_order'] = top_relationships['group'].replace(group_order)\n",
@@ -1448,6 +1460,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "import matplotlib.colors as mcolors\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(10, 6))\n",
@@ -1546,6 +1559,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "df_migration = df[['year', 'from_code2', 'to_code2', 'prop_emigrants_v2p', 'prop_emigrants_p2v', 'points']].copy()\n",
     "\n",
     "# Calculate score deviation per year\n",
@@ -1559,6 +1573,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "fig, (ax1, ax2) = plt.subplots(ncols=2, sharey=True, figsize=(12, 6))\n",
     "sns.regplot(x='prop_emigrants_v2p', y='deviation', data=df_migration, ax=ax1)\n",
     "sns.regplot(x='prop_emigrants_p2v', y='deviation', data=df_migration, ax=ax2)\n",
@@ -1575,6 +1590,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "sns.lmplot(x='prop_emigrants_p2v', y='prop_emigrants_v2p', data=df_migration, scatter_kws={\"s\": 4})\n",
     "\n",
     "# log scale axes\n",
@@ -1621,6 +1637,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "df_performance = df[['year', 'Artist', 'to_country', \n",
     "       'total_points', \n",
     "       'rank', 'to_code2',\n",
@@ -1644,6 +1661,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "# get the percentage of performances who contain own language\n",
     "print('Percentage of performances in own language:', round(sum(df_performance['Contains_Own_Language'])/len(df_performance) *100), '%')\n",
     "print('Percentage of performances in English:', round(sum(df_performance['Contains_English'])/len(df_performance) *100), '%')\n",
@@ -1658,6 +1676,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "df_language = df_performance.copy()\n",
     "\n",
     "df_performance['English_only'] = (df_performance['Contains_English']) & (df_performance['Number_of_Languages'] == 1 )\n",
@@ -1677,6 +1696,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "colours = {\"English_only\":'royalblue', \"No_English\":'seagreen', \"Some_English\":'goldenrod'}\n",
     "\n",
     "df_language.plot(kind='bar', figsize=(15, 6), stacked=True, color=colours)\n",
@@ -1701,6 +1721,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "# convert wide to long format\n",
     "df_long = df_performance[['English_only', 'No_English',\t'Some_English', 'total_points']]\n",
     "\n",
@@ -1715,6 +1736,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "import scipy.stats as stats\n",
     "from statannot import add_stat_annotation\n",
     "\n",
@@ -1747,6 +1769,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "df_language = df_performance.copy()\n",
     "\n",
     "df_performance['Own_language'] = (df_performance['Contains_Own_Language']) \n",
@@ -1765,6 +1788,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "colours = {\"Own_language\":'teal', \"Other_language\":'lightsteelblue'}\n",
     "\n",
     "df_language.plot(kind='bar', figsize=(15, 6), stacked=True, color=colours)\n",
@@ -1797,6 +1821,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "sns.boxplot(x='Number_of_Languages', y='total_points', data=df_performance, showfliers=False)\n",
     "sns.stripplot(x='Number_of_Languages', y='total_points', data=df_performance, jitter=0.25, size=2, color=\".3\", linewidth=0)\n",
     "\n",
@@ -1814,6 +1839,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "# violin plot\n",
     "sns.violinplot(x='Contains_Voting_Language', y='points', data=df, inner=None, color=\"cornflowerblue\")\n",
     "\n",
@@ -1834,6 +1860,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "from matplotlib.colors import to_rgba\n",
     "\n",
     "gender_df = df[['year', 'to_country', 'gender']].copy().drop_duplicates()\n",
@@ -1875,6 +1902,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "for gender in ['female', 'male', 'group']:\n",
     "    count = len(gender_df[gender_df['gender'] == gender])\n",
     "    print('Total {} performers: {} ({:.0%})'.format(gender, count, count/len(gender_df)))\n",
@@ -1897,6 +1925,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "gender_colours = {\n",
     "    'female': to_rgba('seagreen'),\n",
     "    'group': to_rgba('wheat'),\n",
@@ -1922,6 +1951,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "gender_df = df[['year', 'to_code2', 'gender']].copy().drop_duplicates()\n",
     "\n",
     "def ratio(gender, x): return len([a for a in x if a == gender]) / len(x)\n",
@@ -1941,6 +1971,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "# subset gender_colours to genders in gender_df columns\n",
     "# gender_colours = gender_colours[gender_df.columns.to_list()]\n",
     "\n",
@@ -1961,6 +1992,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "gender_df = df[['year', 'to_code2', 'gender', 'points']].copy()\n",
     "genders = list(gender_colours.keys())[:3]\n",
     "votes = []\n",
@@ -2016,6 +2048,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "df_performance = df[['year', 'Artist', 'to_country', \n",
     "       'total_points', 'rank', 'to_code2', \n",
     "       'Official_languages', 'Language_sung', 'Contains_English',\n",
@@ -2031,6 +2064,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "import matplotlib\n",
     "\n",
     "# Define the variables of interest and their data types\n",
@@ -2101,6 +2135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "# plot comps_without_win vs. points\n",
     "sns.violinplot(x='points', y='comps_without_win', data=df)\n",
     "# add jitter\n",
@@ -2128,6 +2163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| code-fold: true\n",
     "# One hot encoding for the gender variable\n",
     "df2 = pd.concat([df, pd.get_dummies(df['gender'])], axis=1)\n",
     "\n",
@@ -2427,7 +2463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
