--- a/stories/2024-01-01-Eurovision/story.ipynb
+++ b/stories/2024-01-01-Eurovision/story.ipynb
@@ -271,7 +271,7 @@
     "\n",
     "To establish the gender of the various performers we capture the *'gender'* property available from [Wikidata](https://www.wikidata.org/wiki/Wikidata:List_of_properties), using code that's based on Sam Van Stroud's [wikipeople script](https://github.com/samvanstroud/wikipeople/blob/master/wikipeople/wikipeople.py).\n",
     "\n",
-    "Rather than referring directly to our [data collection notebook](https://github.com/KatrionaGoldmann/Eurovision_TDS/blob/story_notebook/eurovision/notebooks/data.ipynb) we've kept the code here, since it demonstrates some nice techniques. You'll still need to unfold the celss to view the details.\n",
+    "Rather than referring directly to our [data collection notebook](https://github.com/KatrionaGoldmann/Eurovision_TDS/blob/story_notebook/eurovision/notebooks/data.ipynb) we've kept the code here, since it demonstrates some nice techniques. You'll still need to unfold the cells to view the details.\n",
     "\n",
     "Establishing gender isn't straightforward in all cases. For example, many Eurovision entries are group performances. For these we detect the *'instance of'* Wikidata property, checking whether it's equal to one of *group*, *duo*, *trio*, *music*, *band* or *ensemble*. There are also non-binary performers to consider.\n",
     "\n",
