--- a/stories/2024-01-01-Eurovision/story.ipynb
+++ b/stories/2024-01-01-Eurovision/story.ipynb
@@ -1238,6 +1238,10 @@
     "#| code-fold: true\n",
     "import plotly.express as px\n",
     "\n",
+    "# The following lines are needed for Quarto to render the interactive plot\n",
+    "import plotly.io as pio\n",
+    "pio.renderers.default = \"notebook\"\n",
+    "\n",
     "fig = px.scatter(votes, x='total_points', y='average_points')\n",
     "fig.update_traces(hovertemplate=('Performer: %{customdata[0]}'\n",
     "                                 '<br>Voter: %{customdata[1]}'\n",
