Use Quarto-compatible bullets for unordered list

--- a/stories/2024-01-01-Eurovision/story.ipynb
+++ b/stories/2024-01-01-Eurovision/story.ipynb
@@ -1311,9 +1311,10 @@
    "source": [
     "After looking at the broader patterns above, let's now dive into some specific country-pairs. \n",
     "We will look for the top country pairs which\n",
-    "* give each other very high scores\n",
-    "* give each other very low scores\n",
-    "* have a one-sided relationship, where one country gives high scores to another, but receives low scores back.\n",
+    "\n",
+    "- give each other very high scores\n",
+    "- give each other very low scores\n",
+    "- have a one-sided relationship, where one country gives high scores to another, but receives low scores back.\n",
     "\n",
     "First, we'll filter out countries which haven't participated frequently enough, to ensure that our average voting score is a robust estimate."
    ]
