Change plotly renderer
Co-authored-by: David Llewellyn-Jones <dllewellyn-jones@turing.ac.uk>

--- a/stories/2024-01-01-Eurovision/story.ipynb
+++ b/stories/2024-01-01-Eurovision/story.ipynb
@@ -1240,7 +1240,7 @@
     "\n",
     "# The following lines are needed for Quarto to render the interactive plot\n",
     "import plotly.io as pio\n",
-    "pio.renderers.default = \"notebook\"\n",
+    "pio.renderers.default = \"plotly_mimetype+notebook_connected\"\n",
     "\n",
     "fig = px.scatter(votes, x='total_points', y='average_points')\n",
     "fig.update_traces(hovertemplate=('Performer: %{customdata[0]}'\n",
